syntax = "proto3";
option go_package = "example/proto_example";

service serv {
  rpc Login(UserLogin) returns (SessionToken) {}
  rpc getDetails(UserRequest) returns (UserDetails) {}
  rpc getRisk(SessionToken) returns (RiskScore) {}
}

message UserRequest {
  string SessionToken = 1;
  string UserId = 2;
}

message UserLogin {
  string userName = 1;
  string plaintextPassword = 2;
}
message SessionToken {
  string temp = 1;
}
message UserID {
  string userName = 1;
}
message UserDetails {
  string detauls = 1;
}
message RiskScore {
  int64 score = 1;
}




